# devops-incident-resolver

./: .env.example  .gitignore  README.deploy.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  render_start.sh
backend/devops_resolver/: __init__.py
backend/devops_resolver/application/: agents.py  event_bus.py  schemas.py  use_cases.py
backend/devops_resolver/domain/: __init__.py  models.py  repositories.py
backend/devops_resolver/infrastructure/: demo_data.py  repositories.py  tool_layer.py  vector_store.py
backend/devops_resolver/presentation/api/: __main__.py  dependencies.py  main.py  routes.py
backend/devops_resolver/shared/: config.py  logging.py
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  store.ts  styles.css  types.ts
tests/: conftest.py
tests/agent/: test_investigation_workflow.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_demo_data.py  test_tool_layer.py  test_vector_store.py
