[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-devops-incident-resolver"
version = "0.1.0"
description = "Adaptive multi-agent DevOps incident resolver with LangGraph, RAG, streaming investigation traces, and local demo fallbacks."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "DevOps Incident Resolver Team" }]
dependencies = [
    "aio-pika>=9.4.3,<10.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.6,<1.0.0",
    "faiss-cpu>=1.9.0,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "httpx>=0.28.1,<1.0.0",
    "langchain>=0.3.13,<0.4.0",
    "langchain-community>=0.3.13,<0.4.0",
    "langchain-core>=0.3.28,<0.4.0",
    "langchain-openai>=0.2.14,<0.3.0",
    "langgraph>=0.2.60,<0.3.0",
    "numpy>=2.2.1,<3.0.0",
    "openai>=1.58.1,<2.0.0",
    "prometheus-client>=0.21.1,<1.0.0",
    "psutil>=6.1.1,<7.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-json-logger>=3.2.1,<4.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "redis>=5.2.1,<6.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0,<25.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "respx>=0.21.1,<1.0.0",
    "ruff>=0.8.4,<1.0.0",
    "testcontainers[postgres,redis]>=4.9.0,<5.0.0",
    "types-aiofiles>=24.1.0.20241221",
    "types-psutil>=6.1.0.20241221",
    "types-redis>=4.6.0.20241004",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["devops_resolver*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "FAST",
    "I",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = [
    "B008",
    "E501",
    "FAST001",
    "FAST002",
    "S104",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S106", "S108", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["devops_resolver"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = "backend"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "langchain_community.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=devops_resolver",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
pythonpath = ["backend"]
testpaths = ["tests"]
markers = [
    "agent: multi-agent graph and reflection tests",
    "integration: tests that exercise infrastructure adapters",
    "unit: isolated domain and application tests",
]

[tool.coverage.run]
branch = true
source = ["backend/devops_resolver"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
